compile.log
/main.cpp: In function ‘void readData(Reader&)’:
/main.cpp:124:13: error: ‘cout’ was not declared in this scope
             cout<<"Az a nyomorult: "<<alma.ertek<<"\n";
             ^~~~
/main.cpp:124:13: note: suggested alternative:
In file included from /main.cpp:5:
/usr/include/c++/8/iostream:61:18: note:   ‘std::cout’
   extern ostream cout;  /// Linked to standard output
                  ^~~~
/main.cpp: In function ‘int main()’:
/main.cpp:176:24: warning: comparison of integer expressions of different signedness: ‘int’ and ‘std::vector<Data>::size_type’ {aka ‘long unsigned int’} [-Wsign-compare]
         for (int i=0; i<reader.dataArray.size(); i++)
                       ~^~~~~~~~~~~~~~~~~~~~~~~~
/main.cpp:196:35: warning: comparison of integer expressions of different signedness: ‘int’ and ‘std::vector<Data>::size_type’ {aka ‘long unsigned int’} [-Wsign-compare]
                     for(int j=0; j<reader.dataArray.size(); j++)
                                  ~^~~~~~~~~~~~~~~~~~~~~~~~
/main.cpp:198:59: warning: comparison of integer expressions of different signedness: ‘unsigned int’ and ‘int’ [-Wsign-compare]
                         if(reader.dataArray[j].currStoreId==i && reader.dataArray[j].currRouter==alaprouter )
/main.cpp:272:19: warning: comparison of integer expressions of different signedness: ‘int’ and ‘std::vector<MessagePiece>::size_type’ {aka ‘long unsigned int’} [-Wsign-compare]
     for(int i=0; i<azenyem.size(); i++)
                  ~^~~~~~~~~~~~~~~
/main.cpp:150:9: warning: unused variable ‘befutott’ [-Wunused-variable]
     int befutott=0;
         ^~~~~~~~